sampler/chain/projects/lottie-android/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/lottie-android/lottie/src/main/java/com/airbnb/lottie/animation/keyframe/TransformKeyframeAnimation.java:69: error: [NullAway] (INDEX= 111) (Covered) assigning @Nullable expression to @NonNull field
      startOpacity = null;
                   ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/lottie-android/lottie/src/main/java/com/airbnb/lottie/parser/LottieCompositionMoshiParser.java:195: error: [NullAway] (INDEX= 182) (Covered) passing @Nullable parameter 'relativeFolder' where @NonNull is required
            new LottieImageAsset(width, height, id, imageFileName, relativeFolder);
                                                                   ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/lottie-android/lottie/src/main/java/com/airbnb/lottie/parser/moshi/LinkedHashTreeMap.java:220: error: [NullAway] (INDEX= 231) (Covered) returning @Nullable expression from method with @NonNull return type
    return valuesEqual ? mine : null;
    ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/lottie-android/lottie/src/main/java/com/airbnb/lottie/model/layer/TextLayer.java:476: error: [NullAway] (INDEX= 118) (Covered) assigning @Nullable expression to @NonNull field
        strokeColorCallbackAnimation = null;
                                     ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/lottie-android/lottie/src/main/java/com/airbnb/lottie/LottieAnimationView.java:424: error: [NullAway] (INDEX= 78) (Covered) passing @Nullable parameter 'null' where @NonNull is required
          LottieCompositionFactory.fromAsset(getContext(), assetName) : LottieCompositionFactory.fromAsset(getContext(), assetName, null);
                                                                                                                                    ^
	(see http://t.uber.com/nullaway )
